--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
 h11==0.14.0
+hiredis==3.1.0
 httpcore==1.0.8
 httptools==0.6.4
 httpx==0.28.1
@@ -28,6 +29,7 @@ Pygments==2.19.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+redis==5.2.1
 requests==2.32.3
 rich==14.0.0
 rich-toolkit==0.14.1
